<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">NurseHelper</string>

    <string name="action_about">about</string>
    <string name="action_about_title">About:</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_past_meds">Show meds given</string>
    <string name="action_show_past_assessments">Show previous assessments</string>

    <string name="action_bar_room_number_title">room:</string>

    <string name="title_activity_nurse_login">NurseHelper Login</string>
    <string name="title_activity_list">NurseHelper</string>
    <string name="title_activity_medications">Medications</string>
    <string name="title_activity_meds_given">MedsGiven</string>
    <string name="title_activity_assessments">Assess</string>
    <string name="title_activity_past_assessments">Assessments</string>
    <string name="title_activity_careplan">Care Plan</string>

    <string name="title_widget_residentlist">NurseHelper</string>

    <string name="med_last_given_label">last given:</string>
    <string name="med_due_time_label">next due time:</string>
    <string name="med_give_label">Give:</string>
    <string name="med_refuse_label">Refuse:</string>
    <string name="med_not_given_yet">* This medication has not been given yet *</string>
    <string name="med_given">given</string>
    <string name="med_refused">refused</string>
    <string name="med_dosage_label">dosage:</string>

    <string name="prn_string">PRN</string>
    <!-- ? once or not at all
         * 0 or more times
         + 1 or more times -->
    <!-- the first match for this, will be hours ONLY -->
    <string name="format_admin_hours">\\d+</string>
    <!-- mins must be in ":nn" format, if any -->
    <string name="format_admin_mins">:\\d\\d</string>
    <!-- am/pm/a/p  will also catch ":", if any -->
    <!-- if NO am/pm/a/p, we'll assume military time -->
    <string name="format_admin_am_or_pm">\\s*\\D*</string>

    <!--string name="format_admin_date_time">MM-dd-YY HH:mm</string>
    <string name="format_admin_date">MM-dd-YY</string-->
    <!-- NOTE: 'Y' gives error on my MOTO-4!!! -->
    <string name="format_admin_date_time">MM-dd-yy HH:mm</string>
    <string name="format_admin_date">MM-dd-yy</string>
    <string name="am_string">AM</string>
    <string name="pm_string">PM</string>
    <string name="format_frequency_value">\\d+</string>
    <string name="format_frequency_time_period">\\D+</string>


    <string name="blood_pressure_label">blood pressure: </string>
    <string name="temperature_label">temperature: </string>
    <string name="pulse_label">pulse: </string>
    <string name="rr_label">respiratory rate: </string>
    <string name="edema_label">edema: </string>
    <string name="edema_location_label">location: </string>
    <string name="edema_LLE_label">LLE:</string>
    <string name="edema_RLE_label">RLE:</string>
    <string name="edema_LUE_label">LUE:</string>
    <string name="edema_RUE_label">RUE:</string>
    <string name="edema_pitting_label">pitting:</string>
    <string name="edema_non_pitting_label">non-pitting:</string>
    <string name="pain_label">pain: </string>
    <string name="significant_findings_label">significant findings: </string>
    <string name="done_button_label">DONE</string>

    <string name="bp_label">BP:</string>
    <string name="temp_label">temp:</string>
    <string name="RR_label">RR:</string>
    <string name="locn_label">locn:</string>
    <string name="edema_pitting">pitting</string>
    <string name="edema_non_pitting">non-pitting</string>
    <string name="findings_label">findings:</string>

    <string name="edema_LLE">LLE</string>
    <string name="edema_RLE">RLE</string>
    <string name="edema_LUE">LUE</string>
    <string name="edema_RUE">RUE</string>

    <string name="temperature_default_imperial">98.7\u00B0 F</string>
    <string name="temperature_default_metric">37.1\u00B0 C</string>
    <string name="edema_default">0</string>

    <string-array name="edema_array">
        <item>0</item>
        <item>Stage I</item>
        <item>Stage II</item>
        <item>Stage III</item>
        <item>Stage IV</item>
    </string-array>

    <string-array name="edema_locn_array">
        <item>   </item>
        <item>LLE</item>
        <item>RLE</item>
        <item>LUE</item>
        <item>RUE</item>
    </string-array>


    <!-- Label for the medications-check time interval preference -->
    <string name="pref_time_interval_15min_label">every 15 minutes</string>
    <string name="pref_time_interval_30min_label">every 30 minutes</string>
    <string name="pref_time_interval_45min_label">every 45 minutes</string>
    <string name="pref_time_interval_1hr_label">every hour</string>
    <string name="pref_time_interval_default">30</string>

    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <string name="format_temperature"><xliff:g id="temp">%1.1f</xliff:g>\u00B0</string>

    <string name="pref_time_intervals_key" translatable="false">med_check_time_interval</string>
    <string name="pref_time_intervals_label">Check when meds due:</string>

    <!-- Strings related to Medications-alert on/off Enabled preference -->
    <string name="pref_enable_med_alerts_key" translatable="false">enable_med_alerts</string>
    <string name="pref_enable_med_alerts_label">Medication Alerts</string>

    <string name="pref_enable_med_alerts_true">Enabled</string>
    <string name="pref_enable_med_alerts_false">Not Enabled</string>

    <string name="pref_last_med_alert">last_med_alert</string>



    <!-- SyncAdapter related -->
    <string name="sync_account_type">nursehelper.com</string>
    <string name="content_authority">com.android.janice.nursehelper</string>

    <!-- Empty Residentlist Database -->
    <string name="empty_residentlist">No Pt. Info</string>
    <string name="empty_residentlist_no_network">No resident information available. The network is not available to fetch resident data.</string>
    <string name="empty_residentlist_server_down">No resident information available. The server is not returning data.</string>
    <string name="empty_residentlist_server_error">No resident information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>

    <string name="empty_medications">No Medication Information Available</string>
    <string name="empty_medications_no_network">No medication information available. The network is not available to fetch medication data.</string>

    <string name="empty_medsgivenlist">No Medication Administered Information Available</string>

    <string name="empty_assessmentslist">No Assessment Information Available</string>
    <string name="empty_assessment_no_network">No assessment information available. The network is not available to fetch assessment data.</string>

    <string name="widget_room_number_title">room#</string>
    <string name="widget_med_due_title">meds due / last assessment</string>

    <string name="roomNumber_desc">The room number of the resident/patient</string>

    <!-- Key name for storing internet-type status in SharedPreferences -->
    <string name="pref_status_key" translatable="false">int-status</string>

    <string name="about_dialog_title">About:</string>
    <string name="about">about</string>
    <string name="about_dialog_message">List of your current patients.\
    To see MAR, care-plan, or to enter assessment data, click on the appropriate patient.
    </string>

    <string name="undo_med_given_dialog_title">Undo Med-given?!</string>
    <string name="undo_med_given_dialog_message">Do you mean to uncheck \'give\'?\
    It this med was not actually given, select \'ok\'!\
    Otherwise, select \'cancel\'</string>
    <string name="undo_med_refused_dialog_title">Undo Med-refused?!</string>
    <string name="undo_med_refused_dialog_message">Do you mean to uncheck \'refuse\'?\
    It this med was not actually refused, select \'ok\'!\
    Otherwise, select \'cancel\'</string>
    <string name="invalid_med_given_dialog_title">Invalid \'give\' choice:</string>
    <string name="invalid_med_given_dialog_message">If you mean to \'give\' this med,\
        you must first unselect \'refuse\'; otherwise leave \'refuse\' checked if \
        checking \'give\' was a mistake!</string>
    <string name="invalid_med_refused_dialog_title">Invalid \'refuse\' choice:</string>
    <string name="invalid_med_refused_dialog_message">If you mean to \'refuse\' this med,\
        you must first unselect \'give\'; otherwise leave \'give\' checked if \
        checking \'refuse\' was a mistake!</string>

    <string name="invalid_location_message">This device is not located in a registered area.\
    NurseHelper may only be run at a supported facility.</string>
    <string name="dialog_invalid_location">Invalid Device Location</string>
    <string name="ok">ok</string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>

    <string name="page_number">Page number:</string>

</resources>
