<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <FrameLayout
        android:id="@+id/widget"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:background="@color/colorPrimaryDark">
        <!--android:background="?attr/colorPrimaryDark"-->
        <!--LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_gravity="end|top"
            android:gravity="end|top"
            android:src="@drawable/ic_stat_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:gravity="bottom">

            <TextView
                android:layout_width="@dimen/widget_room_number_width"
                android:layout_height="wrap_content"
                android:text="@string/widget_room_number_title"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/widget_headertext_size"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal|bottom" />

            <TextView
                android:layout_width="@dimen/widget_time_width"
                android:layout_height="wrap_content"
                android:text="@string/widget_med_due_title"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/widget_headertext_size"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal|bottom" />
        </LinearLayout>
        <!--/LinearLayout-->
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary">
        <!--android:background="?attr/colorPrimary"-->
        <ListView
            android:id="@+id/widget_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="0dp"
            tools:listitem="@layout/widget_list_item" />

        <TextView
            android:id="@+id/widget_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/empty_residentlist" />
    </FrameLayout>

</LinearLayout>
